sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:41: error: not found: value inverse
}while (inverse)
        ^